chapter of choice
chapter of choice

--- a/20230202_Natural_disaster_v2.Rmd
+++ b/20230202_Natural_disaster_v2.Rmd
@@ -52,7 +52,7 @@ library(hrbrthemes)
 library(widgetframe)
 library(colormap)
 library(ggiraph)
-library(ggpubr)
+#library(ggpubr)
 library(MVA)
 library(cluster)
 library(ggtext)
@@ -841,5 +841,87 @@ plot(cc,cex = 0.3, hang = -1)
 ```
 
 ## Chapter of choice (Martina)
+
+To make up for the time I missed during the block week on Monday afternoon, I was given the task to produce an additional chapter of choice with a R package that hasn't been used before. Since we have date values in our data set, I thought it would be interesting to try and show a forecast. I started by generating a new dataframe containing the frequency with which "severe storms" happened per month between 2002 and 2023. Since (luckily!) there wasn't such a disaster happening every month, I complemented the data frame by adding every month in the given time period and fill in "0" if there was no event in that month. To generate the time series plot, I loaded the packages "forecast" and also "zoo", because for some reason, R converted the date column into a different index before using it as index for the x-axis. The zoo package allowed to specify the original date column as index for the x-axis. 
+
+
+```{r}
+
+library(forecast)
+library(zoo)
+Sstorms <- subset(df.prep.5, Type == "Severe Storm")
+Sstorms_timeonly <- Sstorms[,c("Disaster#", "DisasterBegin")]
+
+#calculating the frequency of severe storms per month
+Sstorms_month_year <- format(Sstorms_timeonly$DisasterBegin, "%Y-%m")
+freq_table <- table(Sstorms_month_year)
+
+#generating the data frame
+frequency <- data.frame(Sstorms_month_year = names(freq_table), frequency = as.numeric(freq_table))
+
+#converting the date format to a format R can recognize for the time series plot
+frequency$Sstorms_month_year <- as.Date(paste0(frequency$Sstorms_month_year, "-01"), format = "%Y-%m-%d")
+
+##filling in all months without a severe storm happening and adding 0 values 
+# Create a sequence of dates covering the entire range
+start_date <- min(frequency$Sstorms_month_year)
+end_date <- max(frequency$Sstorms_month_year)
+all_dates <- seq(start_date, end_date, by = "month")
+
+# Create a new data frame with missing months filled with 0 values
+dates_df <- data.frame(date = all_dates)
+
+colnames(frequency) <- c("date", "frequency")
+
+# Merge the new data frame with the original data frame
+dates_merged <- merge(frequency, dates_df, by = "date", all = TRUE)
+
+# Replace missing values with 0
+dates_merged[is.na(dates_merged$frequency), "frequency"] <- 0
+
+#somehow, R did not use the date column for the x-axis but converted it first into other indexes. 
+#Therefore, used the zoo package to create the time series object and specify
+#date column as index
+
+ts <- zoo(dates_merged$frequency, order.by = dates_merged$date)
+frequency_tszoo <- zoo(dates_merged$frequency, order.by = dates_merged$date)
+
+# Plot the time series with the original dates as the x-axis
+plot(frequency_tszoo, type = "l", xlab = "Date", ylab = "Frequency", main = "Frequency of severe storms / month")
+```
+
+The time series plot indicates that there is a trend to decreasing frequency of severe storms in later years but no seasonal component can be clearly identified. Trying to decompose the data anyway was therefore not successful and resulted in the error message that the time series is not periodic or has less than two periods. 
+
+```{r}
+stl <- stl(frequency_tszoo, na.action = "omit", s.window = 12)
+```
+
+In another try, I wanted to look at the autocorrelation and partial autocorrelation functions to get an indication if it could make sense to fit a linear model like an Auto-Regressive model on the data for the forecast. 
+The acf resulted in the following plot whereas the pacf resulted in an error message that the maximal lag must be at least one. 
+
+```{r}
+
+acf(frequency_tszoo, na.action = na.pass)
+
+```
+
+```{r}
+
+library(ggfortify)
+ggPacf(frequency_tszoo)
+
+```
+
+By looking at the time series plot, I would also suggest that it's quite hard to do an accurate forecast since the frequency dropped considerably in the past few years. Therefore, I suggest we would need to get additional data to confirm that this is a long-lasting drop which we could base the forecast on. 
+
+PS: Just to try it out, I fitted an AR(1) model on the data as a whole and forecasted the next 100 data points which resulted in non-nonsensical horizontal line:
+
+```{r}
+f_fit <- arima(frequency_tszoo, order = c(1,0,0))
+forecast <- predict(f_fit, n.ahead = 100)
+plot(frequency_tszoo, xlim = c(18000, 19737))
+lines(forecast$pred, lwd = 2, col = "red")
+
+```
 
 ## Conclusions
