--- a/20230202_Natural_disaster_v2.Rmd
+++ b/20230202_Natural_disaster_v2.Rmd
@@ -216,7 +216,7 @@ disastertype_bar + scale_fill_brewer(name = "Disaster Type", palette ="Spectral"
 ### Distribution of disaster types over time
 
 Various insights can be gained from the time plot below. For example, it
-looks like for example severe storms happen quite frequently in general
+looks like severe storms happen quite frequently in general
 except for the years of approximately 2013-2015 and 2017/2018-ish.
 Furthermore, only one volcanic eruption and one severe ice storm was
 recorded in the displayed time period. Dam or Levee breaks and
@@ -246,11 +246,7 @@ ggplot(ts.dataframe, aes(x = Begin, xend = End, y = Type, yend = Type)) +
 
 Exploring the disaster types a little bit further, we can detect in the
 boxplot below that fires show the largest variation in terms of
-duration. It is also the one with the highest median (speaking of
-duration). Next to the natural catastroph fire, earthquakes have the
-second highest Dam or Levee breaks, volcanic eruptions, tornados and
-severe ice storms are amongst the disasters with the shortest durations.
-
+duration. The disaster with the biggest median duration is volcanic eruptions. However, this observation should be analyzed further since it looks like there was only one incidence in the analysed time frame (only the median is shown, no variation visible which means that there is only one data point in this group). Ouliers with very long durations can be detected in the groups of floods, hurricanes, severe storms, and tornados. 
 ```{r EDA Duration, echo=FALSE}
 
 ggplot(df.prep.5, mapping = aes(x = Type, y = Duration)) +
@@ -270,6 +266,7 @@ of the data points. The histogram indicated a right skewed distribution.
 ggplot(data = df.prep.5, 
        mapping = aes(x = Damage, fill = '')) +
   geom_histogram(show.legend = FALSE) +
+  labs(x = "Damage", y = "Count") +
   scale_x_continuous(limits = c(0, 12000)) +
   scale_y_continuous(limits = c(0, 20)) +
   scale_fill_manual(values = c('cyan4')) +
@@ -281,7 +278,7 @@ Also, the difference between the individual damage amounts are quite
 large which makes it hard to work with. Therefore, we took the logarithm
 of the data, which resulted in displaying a normal distribution:
 
-```{r echo=FALSE}
+```{r EDA Damage2, echo=FALSE}
 ggplot(data = df.prep.5, 
        mapping = aes(x = log(Damage), fill = '')) +
   geom_histogram(show.legend = FALSE) +
@@ -291,9 +288,9 @@ ggplot(data = df.prep.5,
 ```
 
 With the transformed data, we could generate a plot showing the damage
-disasters have cause per state in the US over the past 20 years:
+disasters have caused per state in the US over the past 20 years:
 
-```{r echo=FALSE}
+```{r EDA Map1, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::knit_print
 
 us_map <- map_data("state")
@@ -317,7 +314,7 @@ ggplot() +
                       breaks = c(min(map_dam$damage2), max(map_dam$damage2)),
                       labels = c("Low", "High"), na.value = "grey50")+
   guides(fill=guide_legend(title="Log. Damage"))+
-  ggtitle('logarithmized Damage in the USA')
+  ggtitle('Damage per state in the USA')
 
 
 ```
@@ -367,15 +364,9 @@ ggplot() +
 
 ```
 
-### Damage vs. approved
+### Actual Damage vs. approved amount
 
-How different are the estimated damage and the approved amount? Both
-variables are right skewed which leads to a logarithmization. To see if
-there is difference in the amount of money estimated and approved
-according to the different disaster type, a boxplot has been
-implemented. Big difference in the amount can be seen in tornados. More
-money will/has been allocated to help than the estimation. One reason is
-that only after a tornado can the final damage be assessed.
+How much does the estimated damage and the approved amount differ? As before, we worked with log-transformed data.By displaying overlapping histograms, we can conclude that there are a few instances where the approved amount is a lot lower compared to the damage that actually happened. Vice versa, there are instances where the approved amount exeeded the actual damage. 
 
 ```{r EDA Damage vs. approved data, include=FALSE}
 hist.df <- data.frame(Damage = df.prep.5$Damage,
@@ -424,16 +415,16 @@ label_size <- 10  # set the size of the labels
 label_top <- "<span style='font-size: {size}px;'>With Infinite Numbers</span>"
 label_bottom <- "<span style='font-size: {size}px;'>Without Infinite Numbers</span>"
 
-ggarrange(b.app.inf, b.app, 
-          labels = c("With Infinite Numbers", "Without Infinite Number"),
-          font.label = list(size = 10), hjust = -0.1,
-          ncol = 1, nrow = 2)
+#ggarrange(b.app.inf, b.app, 
+ #         labels = c("With Infinite Numbers", "Without Infinite Number"),
+#          font.label = list(size = 10), hjust = -0.1,
+ #         ncol = 1, nrow = 2)
 
 ```
 
 ### Approved and actually used (repair)
 
-How
+When comparing the amount of money that was approved to repair the damage with the actual costs spent on reconstructions, we can see that in almost all cases, less money was spent than approved. 
 
 ```{r data for approved + used, include=FALSE}
 repair.short.df <- data.frame(Approved = df.prep.5$Approved, 
@@ -459,6 +450,8 @@ repair.log.df %>%
       geom_histogram(position = "identity", alpha = 0.5)
 ```
 
+Diving into this in a bit more detail, we can distinguish between disaster types. For some, like tornados or severe ice storms, the approved amounts exceed the spent amounts far more compared to others like earthquakes or floods where the two amounts are much more equal. 
+
 ```{r}
 boxplot.repair.df <- data.frame(ApprovedLog = log(df.prep.5$Approved),
                                RepairLog = log(df.prep.5$Repair),
@@ -472,7 +465,7 @@ b.rep.inf <- boxplot.repair.num.df %>%
   ggplot(aes(y = values, x = Type, fill = Names))+
   geom_boxplot() + 
   facet_wrap(~Type, scale="free")+
-  ggtitle('Approved and Repair Amount logarthmized without Inf Rows')
+  ggtitle('Approved and Repair Amount log-transformed without Inf Rows')
 b.rep.inf + theme(
   plot.title = element_text(size=12, face="bold.italic"),
   axis.text.x=element_blank())
@@ -483,7 +476,7 @@ b.rep <- boxplot.repair.df %>%
   ggplot(aes(y = values, x = Type, fill = Names))+
   geom_boxplot() +
   facet_wrap(~Type, scale="free")+
-  ggtitle('Approved and Repair Amount logarthmized with Inf Rows')
+  ggtitle('Approved and Repair Amount log-transformed with Inf Rows')
 b.rep+
   theme(
   plot.title = element_text(color = 'red',size=12, face="bold.italic"),
@@ -883,7 +876,7 @@ plot(frequency_tszoo, type = "l", xlab = "Date", ylab = "Frequency", main = "Fre
 The time series plot indicates that there is a trend to decreasing frequency of severe storms in later years but no seasonal component can be clearly identified. Trying to decompose the data anyway was therefore not successful and resulted in the error message that the time series is not periodic or has less than two periods. 
 
 ```{r}
-stl <- stl(frequency_tszoo, na.action = "omit", s.window = 12)
+#stl <- stl(frequency_tszoo, na.action = "omit", s.window = 12)
 ```
 
 In another try, I wanted to look at the autocorrelation and partial autocorrelation functions to get an indication if it could make sense to fit a linear model like an Auto-Regressive model on the data for the forecast. 
@@ -897,21 +890,27 @@ acf(frequency_tszoo, na.action = na.pass)
 
 ```{r}
 
-library(ggfortify)
-ggPacf(frequency_tszoo)
+#library(ggfortify)
+#ggPacf(frequency_tszoo)
 
 ```
 
 By looking at the time series plot, I would also suggest that it's quite hard to do an accurate forecast since the frequency dropped considerably in the past few years. Therefore, I suggest we would need to get additional data to confirm that this is a long-lasting drop which we could base the forecast on. 
 
-PS: Just to try it out, I fitted an AR(1) model on the data as a whole and forecasted the next 100 data points which resulted in non-nonsensical horizontal line:
+PS: Just to try it out, I fitted an AR(1) model on the data as a whole and predicted the next 100 data points which resulted in non-nonsensical horizontal line:
 
 ```{r}
 f_fit <- arima(frequency_tszoo, order = c(1,0,0))
 forecast <- predict(f_fit, n.ahead = 100)
-plot(frequency_tszoo, xlim = c(18000, 19737))
+plot(frequency_tszoo, 
+     xlim = c(18000, 19737),
+     xlab = "Time",
+     ylab = "Frequency")
 lines(forecast$pred, lwd = 2, col = "red")
 
 ```
 
-## Conclusions
+## Summary & Conclusion
+
+In this project, we focused on exploratory data analysis and different ways of displaying data. As it is often the case for amounts, count data, etc., our variables like amount of money tended to be right skewed which is why we mostly worked with log-transformed data. The long-transformation helps for example to generate figures that are easier to interpret in terms of detecting differences. However, the caveat is that the "real numbers" cannot be directly read from the graph. Furthermore, the log transformation "shifts" right-skewed data into a more gaussian distribution which is important when the goal is to use statistical analysis methods or machine learning models since most of the methods assume an underlying Gaussian distribution of the data. 
+To generate plots, we quickly started to like the ggplot package. The explanation in the block seminar that ggplot uses a layered approach was very helpful and made using it and starting to play around much more easy and fun. Also the session on R Markdown was incredibly helpful and overall, we are taking a lot of great tips and tricks with us that will for sure make our daily coding life more enjoyable :-)
